# trade_app_v2

./: .gitignore  README.md  app.py  main.py  pyproject.toml  request_token.py  tree.txt
ai/: app.py  config.py  main.py  test_dataset_builder.py  test_dataset_columns.py
ai/dataset/: dataset_builder.py  dataset_manager.py
ai/downloader/: download_manager.py  downloader.py  instrument_services.py  kite_client.py  validator.py  writer.py
ai/pages/: downloader_page.py
ai/styles/: colors.py  theme.py
ai/tasks/: kite_client.py  task_manager.py
ai/views/: dashboard_view.py  dataset_page.py  dataset_view.py  downloader_view.py
auth/: kite_session.py  login.py
backtest/: backtest_engine.py
charts/: candlestick.py  charts_panel.py  macd_chart.py  rsi_chart.py
config/: settings.py  symbols.py
core/: application.py
data/: instrument_manager.py  market_data.py  market_data_service.py
engine/: trade_engine.py
indicators/: atr.py  ema.py  indicator_manager.py  macd.py  rsi.py  vwap.py
services/: futures_data_service.py  option_data_service.py
strategy/: ema_rule.py  macd_rule.py  rsi_rule.py  rule_engine.py  time_rule.py  trading_strategy.py
structure/: opening_range.py  structure_manager.py  swing.py
styles/: theme.py
tests/: test_instrument_manager.py
trade_app/: app.py
trade_app/backtest/: backtest_engine.py
trade_app/charts/: candlestick.py  charts_panel.py  rsi_chart.py
widgets/: indicator_widget.py  market_widget.py  option_data_widget.py  replay_panel.py  sidebar.py  signal_table.py  strategy_widget.py  trade_book.py
(+230 files in other folders)
