[project]
name = "trade-app-v2"
version = "0.1.0"
description = "Professional NIFTY Options Trading Platform"
readme = "README.md"
requires-python = ">=3.13,<3.14"

dependencies = [
    "flask>=3.1.3",
    "kiteconnect>=5.2.0",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "streamlit>=1.46.1",
    "yfinance>=0.2.65",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
